--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <body bgcolor="FFFFF"></body>
-<font color="F0000"><b><u>Malia Sucks lol</u></b></font>
+<font color="F0000"><b><u>Malia Sucks lol</u></b></br>
+<b><u>Delta's Parents actually suck</u></b>
