--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
 <body bgcolor="00000"></body>
-<font color="F0000"><b><u>Malia Sucks lol</u></b></br>
-<b><u>Delta's Parents actually suck</u></b>
+<font color="F0000"><b><u>An Official Test Site</u></b></br>
