--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <body bgcolor="00000"></body>
-<font color="F0000"><b><u>An Official Test Site</u></b></br>
+<font color="F0000"><b>This Website Is Not Yet Completed, Please Wait Until It Is Completed</b></br>
