--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <body bgcolor="00000"></body>
 <font color="F0000"><b>This Website Is Not Yet Completed, Please Wait Until It Is Completed</b></br>
+<font color="F0000"><b>Adam Snowden Sucks Lol</b></br>
