Add a html bracket

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body bgcolor="00000"></body>
-<font color="F0000"><b>This Website Is Not Yet Completed, Please Wait Until It Is Completed</b></br>
-<font color="F0000"><b>Adam Snowden Sucks Lol</b></br>
-<font color="F0000"><b>Adam Snowden Is Also Gay After His Stupid Act At <a href="http://go.pbs-server.uk/">http://go.pbs-server.uk/</a></b></br>
+<!DOCTYPE html>
+<html>
+  <body bgcolor="00000"></body>
+</html>
