--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <html>
   <body bgcolor="00000"></body>
   <title>The Website</title>
-  <font color="FF000">Hi Delta</font>
+  <font color="FF000">Hi Delta is the best</font>
 </html>
