--- a/index.html
+++ b/index.html
@@ -3,4 +3,14 @@
   <body bgcolor="00000"></body>
   <title>The Website</title>
   <font color="FF000">Hi Delta is the best</font>
+  <body>
+     <script src="/phpfreechat-2.1.0/client/lib/jquery-1.8.2.min.js" type="text/javascript"></script>
+      <link rel="stylesheet" type="text/css" href="/phpfreechat-2.1.0/client/themes/default/jquery.phpfreechat.min.css" />
+     <script src="/phpfreechat-2.1.0/client/jquery.phpfreechat.min.js" type="text/javascript"></script>
+      <link rel="stylesheet" type="text/css" href="/phpfreechat-2.1.0/client/themes/carbon/jquery.phpfreechat.min.css" />
+  </body>
+  <div id="mychat"><a href="http://www.phpfreechat.net">Creating chat rooms everywhere - phpFreeChat</a></div>
+  <script type="text/javascript">
+  $('#mychat').phpfreechat({ serverUrl: '/phpfreechat-2.1.0/server' });
+</script>
 </html>
