--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
+<!-DOCTYPE HTML>
 <html>
   <body>
-    <title>The Website</title>
-     <script src="/phpfreechat-2.1.0/client/lib/jquery-1.8.2.min.js" type="text/javascript"></script>
-      <link rel="stylesheet" type="text/css" href="/phpfreechat-2.1.0/client/themes/default/jquery.phpfreechat.min.css" />
-     <script src="/phpfreechat-2.1.0/client/jquery.phpfreechat.min.js" type="text/javascript"></script>
-      <link rel="stylesheet" type="text/css" href="/phpfreechat-2.1.0/client/themes/carbon/jquery.phpfreechat.min.css" />
+    <body bgcolor="00000"></body>
+    <A1>
+      <font color="FF000"><b>In Development...Please Wait...</b></font>
+    </A1>
   </body>
-  <script type="text/javascript">
-  $('#mychat').phpfreechat({ serverUrl: '/phpfreechat-2.1.0/server' });
-</script>
 </html>
