--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <title>The Website</title>
-     <script src="/phpfreechat-2.1.0/client/lib/jquery-1.8.2.min.js" type="text/javascript"></script>
-      <link rel="stylesheet" type="text/css" href="/phpfreechat-2.1.0/client/themes/default/jquery.phpfreechat.min.css" />
-     <script src="/phpfreechat-2.1.0/client/jquery.phpfreechat.min.js" type="text/javascript"></script>
-      <link rel="stylesheet" type="text/css" href="/phpfreechat-2.1.0/client/themes/carbon/jquery.phpfreechat.min.css" />
-  </body>
-  <script type="text/javascript">
-  $('#mychat').phpfreechat({ serverUrl: '/phpfreechat-2.1.0/server' });
+<A1>
+    <script language="javascript">
+        <!--//
+        /*This Script allows people to enter by using a form that asks for a
+        UserID and Password*/
+        function pasuser(form) {
+            if (form.id.value=="Global") { 
+                if (form.pass.value=="GlobalPassCode") {              
+                    location="bank.html" 
+                } else {
+                alert("Invalid Password")
+            }
+        } else {  
+		alert("Invalid UserID")
+    }
+}
+//-->
 </script>
-</html>
+
+<center>
+<table bgcolor="white" cellpadding="12" border="1">
+<tr><td colspan="2"><center><h1><i><b>Login
+Area</b></i></h1></center></td></tr>
+<tr><td><h1><i><b>UserID:</b></i></h1></td><td><form name="login"><input
+name="id" type="text"></td></tr>
+<tr><td><h1><i><b>Password:</b></i></h1></td><td><input name="pass"
+type="password"></td></tr>
+<tr><td><center><input type="button" value="Login"
+onClick="pasuser(this.form)"></center></td><td><center><br><input
+type="Reset"></form></td></tr></table></center>
+</A1>
