--- a/DeltaBank.html
+++ b/DeltaBank.html
@@ -1,3 +1,4 @@
 <body>
-    <font color=red>Your bank</font>
+    <centre><font color=red><u>Your bank</u></font></centre></br>
+    <b><font color=red>$0.00</b>
 </body>
