--- a/DeltaBank.html
+++ b/DeltaBank.html
@@ -2,6 +2,6 @@
     <body bgcolor="00000"></body>
     <centre><font color=red><u>Your bank</u></font></centre></br>
     <b><font color=red>$3,500.00</b></br></br>
-    <b><u>Tranfers</u></b></br>
-    <b>$3,500.00 From (BankAdmin) --> 03/10/15 18:22 GMT</b>
+    <b><u>Transfers</u></b></br>
+    <b>+$3,500.00 From (BankAdmin) --> 03/10/15 18:22 GMT</b>
 </body>
