--- a/bank.html
+++ b/bank.html
@@ -1,4 +1,5 @@
-<font color=red>You have Joined The Bank Section!
+<font color=red>This is the bank section!
+<body bgcolor="00000"></body>
 <script language="javascript">
     <!--//
     /*This Script allows people to enter by using a form that asks for a
