--- a/bank.html
+++ b/bank.html
@@ -5,7 +5,7 @@
     /*This Script allows people to enter by using a form that asks for a
     UserID and Password*/
     function pasuser(form) {
-        if (form.id.value=="Admin") { 
+        if (form.id.value=="BankAdmin") { 
         if (form.pass.value=="XXIS123") {              
             location="controlpanel.html" 
             } else {
