--- a/bank.html
+++ b/bank.html
@@ -20,7 +20,7 @@
 	UserID and Password*/
     function pasuser(form) {
         if (form.id.value=="Delta") { 
-            if (form.pass.value=="default") {              
+            if (form.pass.value=="21109") {              
                 location="DeltaBank.html" 
             } else {
             alert("Invalid Password")
