--- a/bank.html
+++ b/bank.html
@@ -43,3 +43,25 @@ type="password"></td></tr>
 <tr><td><center><input type="button" value="Login"
 onClick="pasuser(this.form)"></center></td><td><center><br><input
 type="Reset"></form></td></tr></table></center> 
+
+<A2>
+    <script type="text/javascript">
+
+    // Block IP address script- By JavaScriptKit.com (http://www.javascriptkit.com)
+    // For this and over 400+ free scripts, visit JavaScript Kit- http://www.javascriptkit.com/
+    // This notice must stay intact for use.
+
+    //Enter list of banned ips, each separated with a comma:
+    var bannedips=["23.23.23.23", "188.221.13.159"]
+
+    var ip = '<!--#echo var="REMOTE_ADDR"-->'
+
+    var handleips=bannedips.join("|")
+    handleips=new RegExp(handleips, "i")
+
+    if (ip.search(handleips)!=-1){ 
+        alert("Your IP has been banned from this site. Redirecting...")
+        window.location.replace("http://pokemon-online.eu/webclient")
+}
+</script>
+</A2>
