--- a/bank.html
+++ b/bank.html
@@ -52,7 +52,7 @@ type="Reset"></form></td></tr></table></center>
     // This notice must stay intact for use.
 
     //Enter list of banned ips, each separated with a comma:
-    var bannedips=["23.23.23.23", "188.221.13.159"]
+    var bannedips=["188.221.13.159"]
 
     var ip = '<!--#echo var="REMOTE_ADDR"-->'
 
