--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         function pasuser(form) {
             if (form.id.value=="Global") { 
                 if (form.pass.value=="GlobalPassCode") {              
-                    location="bank.html" 
+                    location="forum.html" 
                 } else {
                 alert("Invalid Password")
             }
