--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <body bgcolor="00000"></body>
 <A1>
-	<font color="FF000">This website is in development</font>
+	<div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Menu
+                        <span class="caret"></span></button>
+                                <ul class="dropdown-menu">
+                                        <li><a href="#">Function Not Given</a></li>
+                                        <li><a href="#">Function Not Given</a></li>
+                                        <li><a href="#">Function Not Given</a></li>
+                                </ul>
+        </div>
 </A1>
